# easyDDB

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  db.proto  ddb.txt  example.cpp  print.txt  ref.txt  utils.h
brpc/example/echo_c++/: CMakeLists.txt  client.cpp  server.cpp
ddbs/IR/src/: config.cpp  frag_query.cpp  query.cpp  select_query.cpp
ddbs/client/src/: cli.cpp  client.cpp
ddbs/optimizer/src/: metadata.cpp  mysql_connector.cpp  optimizer.cpp
ddbs/server/src/: conf_manager.cpp  db_manager.cpp  (+5 more)
nlohmann_json/: Makefile  cmake_install.cmake
res/: cluster_config.json  site_config.json  table_config.json  test.json
sql-parser/: .gitignore
src/: db.proto  main.cpp
src/client/: cli.cpp  cli.hpp  client.cpp
src/db_server/: DQLexecute.cpp  aug_plan_executor.cpp  aug_plan_executor.h  aug_planner.cpp  aug_planner.h  aug_planner.hpp  cluster_executer.cpp  cluster_manager.cpp  cluster_manager.h  db.cpp  etcd_connector.cpp  etcd_connector.h  executor.cpp  executor.h  kv_manager.cpp  kv_manager.hpp  main  mysql_connector.cpp  mysql_connector.h  mysql_connetor.cpp  optimizer.cpp  query_optimizer.cpp  query_optimizer.h  query_optimizer.hpp  site_executor.cpp  site_task_executor.cpp  site_task_executor.h  utils.h
src/kv_server/: kv.cpp
src/metadata/: Makefile  metadata  metadata.cpp  metadata.h
src/mysql_connector/: Makefile  mysql_connector  mysql_connector.cpp
src/optimizer/: Makefile  preprocess  preprocess.cpp  utils.h
test/: db.pb.cc  db.pb.h
tmp/: a.json
zy_try/: json.proto
(+28 files in other folders)
